# pulse-desktop

./: Cargo.toml  INTEGRATION_COMPLETE.md  MIGRATION_NOTES.md  README.md  package-lock.json  package.json  todo.md  warnings.md
.copilot/: ClipsList-Design.md  Debug-System.md  Keyboard-Accessibility.md  Undo-Redo-System.md
.github/: DEVELOPMENT_PROGRESS.md  DUPLICATE_TIMELINE_FIX.md  HOTKEY_IMPLEMENTATION.md  INSTANT_RECORDING_FIX.md  LOGGING_IMPLEMENTATION.md  MP4_ENCODING_PLAN.md  MP4_ENCODING_SUMMARY.md  MP4_STATUS.md  RACE_CONDITION_FIX.md  SCREEN_CAPTURE_PLAN.md  SCREEN_CAPTURE_SUMMARY.md  TESTING_MP4_ENCODING.md  TESTING_SCREEN_CAPTURE.md  TOKIO_RUNTIME_FIX.md  copilot-instructions.md
crates/screen-capture/: ARCHITECTURE.md  AUDIO_PLAN.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  SUCCESS.md  SUMMARY.md  build.rs
crates/screen-capture/examples/: basic.rs  test.rs
crates/screen-capture/src/: lib.rs  windows.rs
crates/screen-capture/src/macos/: SCRecorder.h  SCRecorder.m  bridge.rs  mod.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  fs_watcher.rs  lib.rs  logging.rs  main.rs  state.rs
src/components/: ClipsList.css  ClipsList.tsx  DebugControls.css  DebugControls.tsx  ProjectNameModal.css  ProjectNameModal.tsx  ProjectPanel.css  ProjectPanel.tsx  RecordingsList.css  RecordingsList.tsx  RegionOverlay.css  RegionOverlay.tsx  SettingsPanel.css  SettingsPanel.tsx  StatusChip.css  StatusChip.tsx  StatusIndicator.css  StatusIndicator.tsx
(+14 files in other folders)
